--- a/app_frontend/index.html
+++ b/app_frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>app_frontend</title>
+    <title>Archit Kumar | Senior Software Engineer</title>
   </head>
-  <body>
+  <body class="bg-[linear-gradient(135deg,#0f0f1a_0%,#1a1a2e_50%,#16213e_100%)]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
