[Frontend]: Remove Bg from index.html

--- a/app_frontend/index.html
+++ b/app_frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Archit Kumar | Senior Software Engineer</title>
   </head>
-  <body class="bg-[linear-gradient(135deg,#0f0f1a_0%,#1a1a2e_50%,#16213e_100%)]">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
