[Frontend]: Added portfolio icon

--- a/app_frontend/index.html
+++ b/app_frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/004/637/540/non_2x/portfolio-icon-in-linear-style-vector.jpg" type="image/svg+xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Archit Kumar | Senior Software Engineer</title>
   </head>
